# spark

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  spark.cpp
src/core/: attribute.h  bitops.h  core.h  enum_flag.h  error.h  event.h  hash.h  log.h  memory.h  object.h  object_pool.h  path.cpp  path.h  rtti.cpp  rtti.h  serializable.h  serialization.cpp  serialization.h  unique_id.cpp  unique_id.h  uuid.cpp  uuid.h  variadic.h
src/core/io/: dir_access.cpp  dir_access.h  file_access.cpp  file_access.h  file_access_base.cpp  file_access_base.h
src/display/: display_server.cpp  display_server.h
src/input/: input.h  input_events.cpp  input_events.h
src/math/: bounding_box.h  detection.h  math_define.h  plane.h  sp_math.h  transform_util.cpp  transform_util.h
src/platform/: platform.cpp  platform.h
src/platform/win/: win_util.cpp  win_util.h
src/render/: canvas_renderer.cpp  render_canvas.h  render_scene.cpp  render_scene.h  render_storage.cpp  render_storage.h  render_system.cpp  render_system.h
src/render/render_object/: render_viewport.cpp  render_viewport.h
src/rhi/: ez_vulkan.cpp  ez_vulkan.h  rhi_shader_mgr.cpp  rhi_shader_mgr.h  shader_compiler.cpp  shader_compiler.h  shader_manager.cpp  shader_manager.h
src/scene/: node.cpp  node.h  scene_tree.cpp  scene_tree.h  viewport.cpp  viewport.h
src/serialization/: binary_stream.cpp  binary_stream.h  serializable.h  serialization.h
src/sp_core/: CMakeLists.txt  sp_application.cpp  sp_application.h  sp_core.cpp  sp_event.cpp  sp_event.h  sp_log.h  sp_module.cpp  sp_module.h
src/sp_math/: CMakeLists.txt  sp_math.cpp  sp_math.h
src/sp_rhi/: sp_rhi.cpp  sp_rhi.h
