set(SP_ALL_SOURCE_FILES spark.h spark.cpp)

# core
file(GLOB_RECURSE SP_CORE_SOURCE_FILES "core/*.h" "core/*.cpp")
set(SP_ALL_SOURCE_FILES ${SP_ALL_SOURCE_FILES} ${SP_CORE_SOURCE_FILES})

# math
file(GLOB_RECURSE SP_MATH_SOURCE_FILES "math/*.h" "math/*.cpp")
set(SP_ALL_SOURCE_FILES ${SP_ALL_SOURCE_FILES} ${SP_MATH_SOURCE_FILES})

# scene
file(GLOB_RECURSE SP_SCENE_SOURCE_FILES "scene/*.h" "scene/*.cpp")
set(SP_ALL_SOURCE_FILES ${SP_ALL_SOURCE_FILES} ${SP_SCENE_SOURCE_FILES})

# display
file(GLOB_RECURSE SP_DISPLAY_SOURCE_FILES "display/*.h" "display/*.cpp")
set(SP_ALL_SOURCE_FILES ${SP_ALL_SOURCE_FILES} ${SP_DISPLAY_SOURCE_FILES})

add_library(spark STATIC ${SP_ALL_SOURCE_FILES})
target_include_directories(spark PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})