set(SP_ALL_SOURCE_FILES spark.h spark.cpp)

# core
file(GLOB_RECURSE SP_CORE_SOURCE_FILES "core/*.h" "core/*.cpp")
set(SP_ALL_SOURCE_FILES ${SP_ALL_SOURCE_FILES} ${SP_CORE_SOURCE_FILES})

# platform
file(GLOB_RECURSE SP_PLATFORM_SOURCE_FILES "platform/*.h" "platform/*.cpp")
set(SP_ALL_SOURCE_FILES ${SP_ALL_SOURCE_FILES} ${SP_PLATFORM_SOURCE_FILES})

# math
file(GLOB_RECURSE SP_MATH_SOURCE_FILES "math/*.h" "math/*.cpp")
set(SP_ALL_SOURCE_FILES ${SP_ALL_SOURCE_FILES} ${SP_MATH_SOURCE_FILES})

# input
file(GLOB_RECURSE SP_INPUT_SOURCE_FILES "input/*.h" "input/*.cpp")
set(SP_ALL_SOURCE_FILES ${SP_ALL_SOURCE_FILES} ${SP_INPUT_SOURCE_FILES})

# rhi
file(GLOB_RECURSE SP_RHI_SOURCE_FILES "rhi/*.h" "rhi/*.cpp")
set(SP_ALL_SOURCE_FILES ${SP_ALL_SOURCE_FILES} ${SP_RHI_SOURCE_FILES})

add_library(spark STATIC ${SP_ALL_SOURCE_FILES})
target_include_directories(spark PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})